applications/overlays/hcloud/couchdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  namespace: data
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'couchdb.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - couchdb.macro.network
  rules:
    - host: couchdb.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: single-couchdb
                port:
                  number: 5984
